Logs/log-m2.txt
ERROR > An Error Occured
Traceback (most recent call last):
  File "bot.py", line 38, in <module>
    exec(rk.read())
  File "<string>", line 2
    async def help(ctx)
                      ^
SyntaxError: invalid syntax
ERROR > An Error Occured
Traceback (most recent call last):
  File "bot.py", line 38, in <module>
    exec(rk.read())
  File "<string>", line 1, in <module>
NameError: name 'zz' is not defined
